--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "convert-csv-to-json": "^1.3.3",
+    "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "html-pdf-node": "^1.0.8",
     "multer": "^1.4.5-lts.1"
